--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stellarforge-enhanced",
+  "name": "celestialmechanics",
   "version": "1.0.0",
   "description": "Scientific cosmic simulation platform for observing and simulating the universe",
   "main": "electron/main.cjs",
@@ -22,7 +22,7 @@
     "universe",
     "scientific"
   ],
-  "author": "StellarForge Team",
+  "author": "CelestialMechanics Team",
   "license": "MIT",
   "dependencies": {
     "@react-three/drei": "^9.92.7",
@@ -37,22 +37,22 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/three": "^0.160.0",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^8.2.2",
     "cross-env": "^10.1.0",
-    "electron": "^28.3.3",
-    "electron-builder": "^24.13.3",
-    "eslint": "^8.56.0",
+    "electron": "^40.1.0",
+    "electron-builder": "^26.6.0",
+    "eslint": "^9.39.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vitest": "^1.1.0",
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18",
     "wait-on": "^9.0.3"
   },
   "build": {
-    "appId": "com.stellarforge.enhanced",
-    "productName": "StellarForge Enhanced",
+    "appId": "com.celestialmechanics.app",
+    "productName": "CelestialMechanics",
     "directories": {
       "output": "dist-electron"
     },
