--- a/package.json
+++ b/package.json
@@ -25,12 +25,18 @@
   "author": "CelestialMechanics Team",
   "license": "MIT",
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "@react-three/postprocessing": "^3.0.4",
+    "cannon-es": "^0.20.0",
     "immer": "^10.0.3",
+    "leva": "^0.10.1",
+    "postprocessing": "^6.38.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.160.0",
+    "three-stdlib": "^2.36.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
