--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "@react-three/postprocessing": "^2.16.3",
     "cannon-es": "^0.20.0",
     "immer": "^10.0.3",
     "leva": "^0.10.1",
+    "postprocessing": "^6.36.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.160.0",
