--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,7 +8,6 @@
         "strict": true
     },
     "include": [
-        "vite.config.ts",
-        "electron.vite.config.ts"
+        "vite.config.ts"
     ]
 }
